fixing bulk upload tests